<resources>
    <string name="app_name">Focus2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="todo">To Do:</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">back</string>
    <string name="new_task">New task</string>
    <string name="alarm">Alarm</string>
    <string name="dueDate">Due Date</string>
    <string name="done">Done</string>
    <string name="notes">Notes</string>
    <string name="add_new_task">Add New Task</string>
    <string name="repeat">Repeat</string>
    <string name="to_do">To Do:</string>
</resources>